--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
-abstra==3.5.1
+abstra==3.7.0
 protobuf==5.29.3
 google-cloud-vision==3.9.0
 google-cloud-language==2.16.0
 openai==1.60.1
+pdf2image
+pillow==10.4.0
+requests==2.32.3
